demos/26-cf2cnp-policy-from-flows/policies/cnp-pos-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pos
  namespace: cf2cnp-lab
spec:
  description: Allow egress traffic from cf2cnp-lab to 104.20.23.154 for the pos
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pos
  egress:
    - toCIDR:
        - 104.20.23.154/32
    # To allow all traffic to world instead of specific IPs, replace toCIDR with:
    # - toEntities:
    #     - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
